# nano-gajae-code

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.CN.md  README.md  biome.json  feature-default-analysis.md  package.json  rust-toolchain.toml
.config/: nextest.toml
artifacts/: architecture-2383-eval.json  compaction-behavior-conclusion.md  compaction-frequency-analysis-v2.md  compaction-mining-v2.json  compaction-root-cause-report.md  g001-mining-qa-report.json  g001-ws0-redteam-report.json  g002-root-cause-qa-report.json  g002-ws1-redteam-report.json  g003-conclusion-qa-report.json  g003-ws2-redteam-report.json  g004-cli-replay.json  g004-miner-qa-report-v2.json  g004-miner-qa-report.json  g004-ws3-redteam-report.json  g005-ws4-redteam-report.json  g006-ws6-redteam-report.json  g007-ws5-redteam-report.json  ultragoal-g002-pty-capture.txt
crates/gjc-notifications/: Cargo.toml
crates/gjc-notifications/src/: actions.rs  lib.rs  protocol.rs  server.rs
docs/: adr-inline-selection-gate.md  adr-sessions-dashboard.md  aside-integration.md  auth-broker-gateway.md  bash-tool-runtime.md  bot-integration.md  bridge.md  codebase-overview.md  cpu-hotspot-map.json  cpu-hotspot-map.review.json  cpu-hotspot-map.verify.txt  environment-variables.md  extragoal-skill-template.md  git-upstream-cherry-pick.md  handoff-generation-pipeline.md  hermes-mcp-bridge.md  keybindings.md  memory.md  models.md  multi-vendor-profiles.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  notifications-sdk.md  (+19 more)
(+97 files in other folders)
